--- a/One_shot_classification.ipynb
+++ b/One_shot_classification.ipynb
@@ -85,7 +85,7 @@
       "source": [
         "class Task_PaintingsData(object):\n",
         "    \n",
-        "    ''' This function samples the training and testing files along with the corresponding labels.\n",
+        "    ''' This class samples the training and testing files along with the corresponding labels.\n",
         "    Arguments:-\n",
         "    class_folders : The folders containing your training or testing classes.\n",
         "    num_classes : The number of classes you want to sample from all the classes i.e N-way\n",
@@ -137,7 +137,7 @@
       "source": [
         "class FewShotData(torch.utils.data.Dataset):\n",
         "\n",
-        "    ''' This function is custom dataset class which will be required by dataloader.\n",
+        "    ''' This class is custom dataset class which will be required by dataloader.\n",
         "        The class returns the image and the corresponding label.\n",
         "        Argumnets:-\n",
         "        Task : It is the Task_PaintingsData object.\n",
